--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,18 +1,16 @@
 .header {
-    background-color: black;
-    height: 40px;
-    font-size: 20px;
-    
+    background: #000;
 }
 
-.header-tittle {
-    color: white;
-   
+.header__inner {
+    margin: 0 auto;
+    padding: 20px 15px;
+    max-width: 1230px;
 }
 
-.header-result {
-    background-color: #d1e7dd;
-    color: #0f5132;
-    border-color: #badbcc;
-    
+.header__logo {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 24px;
 }
